# matrix-youtube-dl-bot

./: .gitignore  dQw4w9WgXcQ.mp4.part  main.py  pyproject.toml
src/: __init__.py  bot.py  parser.py  upload.py
